<resources>
    <string name="app_name">Learn Hanzi</string>
    <string name="learn_hanzi">学习</string>
    <string name="learn">Learn</string>
    <string name="n_more_left">%d more left</string>
    <string name="review">Review</string>
    <string name="review_hanzi">回顾</string>
    <string name="fully_learnt">Fully learnt: %d\%%</string>
    <string name="next">Next</string>
    <string name="definition">Definition</string>
    <string name="check">Check</string>
    <string name="n_cards_locked">Cards locked: %d</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="locked">Locked</string>
    <string name="not_learnt">Not learnt</string>
    <string name="started_to_learn">Started to learn</string>
    <string name="learnt_somewhat">Learnt somewhat</string>
    <string name="learnt">Learnt</string>
    <string name="burnt">Burnt</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="manage">Manage cards</string>
    <string name="pinyin">Pinyin</string>
    <string name="symbol">Symbol</string>
    <string name="memo">Memo</string>
    <string name="parent_radicals">Parent radicals</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="n_lessons_left">%d lessons left</string>
    <string name="words_in_this_lesson">Words in this lesson:</string>
    <string name="rules">規則</string>
    <string name="rules_button">Rules</string>
    <string name="unlock_card_manager">Unlock card manager</string>
</resources>